# comfyui-qwen3-autotagger

./: .gitignore  BOOSTY_PROFILE_KIT.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  __init__.py  install.py  nodes.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
comfyui-qwen3-autotagger/: README.md  __init__.py  nodes.py  pyproject.toml
comfyui-qwen3-autotagger/example_workflows/: Qwen3VLAutoTagger_api.json  Qwen3VLAutoTagger_minimal.json
comfyui-qwen3-autotagger/web/docs/: Qwen3VLAutoTagger.md
example_workflows/: Qwen3VLAutoTagger_api.json  Qwen3VLAutoTagger_minimal.json
web/docs/: Qwen3VLAutoTagger.md
