[project]
name = "qwen3-vl-autotagger"
version = "0.1.0"
description = "ComfyUI node that generates Adobe Stock-style metadata with Qwen3-VL."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ekkonwork" }]
dependencies = [
  "transformers @ git+https://github.com/huggingface/transformers",
  "qwen-vl-utils>=0.0.14",
  "accelerate>=0.30.0",
  "bitsandbytes>=0.43.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
]

[project.urls]
Repository = "https://github.com/ekkonwork/comfyui-qwen3-autotagger"
Documentation = "https://github.com/ekkonwork/comfyui-qwen3-autotagger#readme"
Issues = "https://github.com/ekkonwork/comfyui-qwen3-autotagger/issues"

[tool.comfy]
PublisherId = "ekkonwork"
DisplayName = "Qwen3 VL AutoTagger"
# Icon = ""  # Optional: path to 256x256 icon
# Banner = ""  # Optional: path to banner image
